# ccfolio

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  codecov.yml  docker-compose.yml  nginx.conf
.github/workflows/: pre-commit.yml  ubuntu.yml
App/: main.cc
Docs/: Doxyfile
Source/: CMakeLists.txt
Source/Controllers/: UserController.h
Source/Entities/: User.h
Source/Interfaces/: IUserRepository.h
Source/Repositories/: UserRepository.h
Source/UseCases/: CreateUserUseCase.h  GetUserUseCase.h
app/: CMakeLists.txt  main.cc
app/Controllers/: TestController.h  UserController.h
app/Dtos/: CreateUserDto.h  ResponseDto.h  UserDto.h
app/Entities/: ApiKey.h  OperationResult.h  User.h
app/Entities/odb/: ApiKey-odb.cxx  ApiKey-odb.hxx  ApiKey-odb.ixx  ApiKey.sql  User-odb.cxx  User-odb.hxx  User-odb.ixx  User.sql
app/Interfaces/: IApiKeyRepository.h  IRepository.h  IUserRepository.h
app/Middleware/: AuthenticationMiddleware.cc  AuthenticationMiddleware.h
app/Repositories/: ApiKeyRepository.h  OdbRepository.h  UserRepository.h
app/Services/: UserService.h
app/Websocket/Commands/: RegisterCommand.h  TestCommand.h
app/Websocket/Security/: APIKeyVerifier.h
cert/: server.crt  server.key
cmake/: Tools.cmake  Warnings.cmake  env.cmake
configured/: CMakeLists.txt  config.hpp.in
docs/: Doxyfile
src/: CMakeLists.txt
src/Application/: CMakeLists.txt
src/Application/Dtos/: ResponseDto.h  UserDto.h
src/Application/Services/: UserService.h
src/Controllers/: TestController.h  UserController.h
src/Core/: CMakeLists.txt
src/Core/Logging/: LogService.h
src/Core/Utility/: AppConfiguration.h
src/Domain/: CMakeLists.txt
src/Domain/Entities/: OperationResult.h  User.h
src/Domain/Entities/odb/: User-odb.cxx  User-odb.hxx  User-odb.ixx
src/Domain/Interfaces/: IRepository.h  IUserRepository.h
src/Entities/: OperationResult.h  User.h
src/Entities/Match/: Media.h
src/Entities/odb/: User-odb.cxx  User-odb.ixx  User.sql
src/Infrastructure/: CMakeLists.txt
src/Infrastructure/Database/: MySQLConnector.cpp  MySQLConnector.h
src/Infrastructure/Repositories/: OdbRepository.h  UserRepository.h
src/Middleware/: AuthMiddleware.h
src/Network/: Beast.h  CommandRegistrar.h  CommandRegistry.h  HttpSession.cc  HttpSession.h  ICommand.h  ICommandRegistrar.h  Listener.h  Net.h  Router.h  Session.h  SharedState.cc  SharedState.h  WebSocketSession.cc  WebSocketSession.h  listener.cc
src/Presentation/: CMakeLists.txt
src/Presentation/Controllers/: TestController.h  UserController.h
src/Presentation/Middleware/: AuthMiddleware.h
src/Repositories/: OdbRepository.h  UserRepository.h
src/Security/: APIKeyHelper.h  IAPIKeyVerifier.h  JWTHelper.cc  JWTHelper.h  PasswordHelper.cc  PasswordHelper.h
src/Services/: UserService.h
src/UseCases/: CreateUserUseCase.h  GetUserUseCase.h
src/Utility/: AppConfiguration.h  LogService.cc  LogService.h  Utility.h
tests/: CMakeLists.txt
